Change the use of double and integer Issue #58